<resources>
    <string name="app_name">Junkbox</string>
    <string name="action_settings">Settings</string>
    <string name="app_info">App Info</string>
    <string name="lbl_flac_app_btn">Flac HD Audio Recorder</string>
    <string name="flac_welcome_msg">Start a new recording below...</string>
    <string name="audio_rec_test_btn_lbl">Audio Record Test (Android Example)</string>
    <string name="lbl_audio_rec3_btn">WAV Recorder Class Example</string>
    <string name="recorder_functions">Recorder\nFunctions:</string>
    <string name="current_state">Current State:</string>
    <string name="playback_functions">Playback\nFunctions:</string>
    <string name="compressed">Compressed\n(Lossy)</string>
    <string name="uncompressed">Uncompressed\n(Lossless)</string>
    <string name="quality">Quality:</string>
    <string name="notify_bpm">BPM : </string>
    <string name="subdivision_tool">Subdivision Tool</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="settings_msg">Settings UI not yet developed :(</string>
    <string name="app_info_msg">App version: 1.0.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_setlist">Current Setlist</string>
    <string name="title_activity_nav_home">JunkBox Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bpm_activity_title">BPM LED Tool</string>
    <string name="change_album_theme">Change Album Theme</string>
    <string name="album_photo_changed">Album Photo Changed</string>
    <string name="them_bones">Them Bones</string>
    <string name="_2_32">2:32</string>
    <string name="them_bones_tempo">166 bpm</string>
    <string name="album_dirt">Dirt</string>
</resources>
