<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    xmlns:xmnls="http://schemas.android.com/tools"
    android:padding="6dip">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/setlistAlbumIcon"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/dirt_cover" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="start"
        android:layout_toRightOf="@id/setlistAlbumIcon"
        android:ellipsize="marquee"
        android:text="@string/them_bones"
        android:textSize="14sp"
        android:textAlignment="textStart"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/songTitle"
        android:layout_toRightOf="@id/setlistAlbumIcon"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fromAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/album_dirt" />

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/_2_32" />

        <TextView
            android:id="@+id/songBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/them_bones_tempo" />


    </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDivider" />


</LinearLayout>